dnl Process this file with autoconf to produce a configure script.
AC_INIT(pathsearch.c)

AC_CANONICAL_HOST
if test -z "$host"; then
  host=unknown
fi
target_host_type=$host
canonical_host_type=$host

### Enable creation of shared libraries.  Currently only works with
### gcc on some systems.

AC_ARG_ENABLE(shared,
  [  --shared                create shared libraries (not all systems)],
  [if test $enableval = no; then SHARED_LIBS=false; else SHARED_LIBS=true; fi],
  SHARED_LIBS=false)
AC_SUBST(SHARED_LIBS)

CPICFLAG=-fPIC
SHLEXT=so
SH_LD="$CC"
SH_LDFLAGS=-shared
case "$canonical_host_type" in
  *-*-386bsd* | *-*-openbsd* | *-*-netbsd* | *-*-freebsd*)
    SH_LD=ld
    SH_LDFLAGS=-Bshareable
  ;;
  alpha-dec-osf*)
    CPICFLAG=
    SH_LDFLAGS="-Xlinker -exepct_unresolved -Xlinker '*'"
  ;;
  rs6000-ibm-aix* | powerpc-ibm-aix*)
    CPICFLAG=
  ;;
  hppa*-hp-hpux*)
    SHLEXT=sl
  ;;
esac
AC_MSG_RESULT([defining CPICFLAG to be $CPICFLAG])
AC_MSG_RESULT([defining SHLEXT to be $SHLEXT])
AC_MSG_RESULT([defining SH_LD to be $SH_LD])
AC_MSG_RESULT([defining SH_LDFLAGS to be $SH_LDFLAGS])
AC_SUBST(CPICFLAG)
AC_SUBST(SHLEXT)
AC_SUBST(SH_LD)
AC_SUBST(SH_LDFLAGS)

sinclude(common.ac)

AC_OUTPUT(Makefile)
