dnl Process this file with autoconf to produce a configure script.
AC_INIT(readline.c)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_CHECK_LIB(termcap, tputs)

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS(fcntl.h sgtty.h termio.h unistd.h varargs.h sys/file.h)
AC_CHECK_HEADERS(sys/ioctl.h sys/time.h sys/pte.h sys/ptem.h sys/stream.h)
AC_CHECK_HEADERS(sys/select.h stdlib.h string.h)

AC_FUNC_ALLOCA
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getwd select strerror strcasecmp strncasecmp)

AC_OUTPUT(doc/Makefile examples/Makefile Makefile)
